# p3-tpu-event-model

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  TODO.md  VALIDATION.md  changes  compare.py  datacenter.csv  edge_dev.csv  edge_dev_70b_test.csv  fa2-edited-schedule.yaml  fa2-template.yaml  fa2_single_tile_terminal_test.txt  flash_attention_2_schedule.json  results.txt  rs_print  sim_err.txt  sim_out.txt  sweep.py  sweep_1b.csv  sweep_1b_results.csv  sweep_20260610_111122.csv  sweep_8b_results.csv  sweep_focused.csv  sweep_safe.py
apps/: CMakeLists.txt  sim_main.cpp
cmake/: FetchDeps.cmake
configs/: datacenter.yaml  default.yaml  edge_dev.yaml  systolic_1024.yaml  systolic_128_bidir.yaml  systolic_256.yaml  systolic_256_bidir.yaml  systolic_512.yaml
documentation/: 01-adding-a-new-unit.md  02-adding-a-new-operation.md  03-simulator-engine.md  04-creating-schedules.md  05-cpp-schedule-generator.md  README.md
output/: fa2_single_tile_trace.txt  llama_prefill_decode_no_trace.txt  llama_prefill_decode_trace.txt  sim_no_trace_key_metrics.txt
plots/archive/: README.md
schedules/: dummy_example.yaml  fa2-edited-schedule.yaml  fa2-template.yaml  fa2_full_2q_4kv.yaml  fa2_full_llama3_8b.yaml  fa2_full_matrix.yaml  fa2_hw.yaml  fa2_single_tile.yaml  gemm_basic.yaml  gemm_bidir_compare.yaml  gemm_compute.yaml  gemm_tiled.yaml
scripts/: gen_fa2_full.py  gen_fa2_schedule.py  sweep.py
src/: CMakeLists.txt  main.cpp
src/config/: arch_config.cpp  arch_config.h
src/core/: event.h  event_engine.cpp  event_engine.h  logger.cpp  logger.h  tensor_store.h  types.h  unit.h
src/engine/: engine.cpp  engine.h  event.h
src/schedule/: dummy_schedule.cpp  dummy_schedule.h  fa2_tiler.cpp  fa2_tiler.h  instruction.h  llama_schedule.cpp  llama_schedule.h  op_handlers.cpp  op_handlers.h  op_registry.cpp  op_registry.h  schedule.cpp  schedule.h  scheduler.cpp  scheduler.h  tiler.cpp  tiler.h
src/units/: access_unit.cpp  access_unit.h  buffer_unit.cpp  buffer_unit.h  delay_unit.cpp  delay_unit.h  dma_unit.cpp  dma_unit.h  printing_unit.cpp  printing_unit.h  systolic_unit.cpp  systolic_unit.h  vector_unit.cpp  vector_unit.h
sweep/scripts/: sweep.py  sweep_safe.py
sweep/sweep_csv/: calib_correct.txt  datacenter.csv  edge_dev.csv  edge_dev_1b.csv  edge_dev_70b_test.csv  edge_dev_8b.csv  sweep_1b.csv  sweep_1b_plots.csv  sweep_1b_results.csv  sweep_3e_1b.csv  sweep_4a_1b.csv  sweep_8b_results.csv  sweep_focused.csv  test_70b.csv
tests/: CMakeLists.txt  test_config.cpp  test_dummy_units.cpp  test_engine.cpp  test_event_engine.cpp  test_fa2_correctness.cpp  test_fa2_full.cpp  test_fa2_schedule.cpp  test_hardware_units.cpp  test_llama_schedule.cpp  test_schedule.cpp  test_systolic.cpp  test_systolic_compute.cpp  test_tiler.cpp
workloads/: fa2_attention.yaml  fa2_gqa_8g4h.yaml  fa2_qkt.yaml  gemm_128.yaml  gemm_512.yaml  gemm_nonquare.yaml  llama_decode_throughput.yaml  llama_prefill.yaml  llama_prefill_decode.yaml  llama_prefill_decode_1B.yaml  llama_prefill_decode_70B.yaml  llama_prefill_decode_8B.yaml  val_attn_gqa.yaml  val_attn_gqa_nocausal.yaml  val_attn_mha.yaml  val_full8b.yaml  val_head.yaml  val_layer.yaml
